--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <title>Document</title>
 </head> 
 <body>
-   <div class="main-container">
-    <button class="btn btn-left">◀️</button>
-    <button class="btn btn-right">▶️</button>
+   <div class="main-container" id="main-container">
+    <button id="btn-left" >◀️</button>
+    <button id="btn-right">▶️</button>
    </div>
 
 <script src="script.js"></script>
